plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.deardream'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation("org.springframework.boot:spring-boot-starter-validation:3.5.3")

	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	implementation 'me.paulschwarz:spring-dotenv:2.2.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

	// Swagger config
	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6")

	//s3
	implementation("org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE")
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.490'
	// 취약한 transitive dependency를 안전한 버전으로 오버라이드
	implementation 'software.amazon.ion:ion-java:1.0.2'

	// thymeleaf - for rendering HTML templates
	implementation("org.springframework.boot:spring-boot-starter-thymeleaf:3.5.3")
	implementation 'ognl:ognl:3.2.21'

	implementation("com.openhtmltopdf:openhtmltopdf-pdfbox:1.0.10")

	// https://mvnrepository.com/artifact/org.xhtmlrenderer/flying-saucer-pdf
	implementation("org.xhtmlrenderer:flying-saucer-pdf:9.13.0")


	// 테스트 코드 실행 시 필요한 의존성
	testImplementation 'org.springframework.boot:spring-boot-starter-test'


}

tasks.named('test') {
	useJUnitPlatform()
}
